test/expected/declare_nmo_amper_i_i.out
declare & as non-member operator (int) returning int
                                  ^
35: error: at least 1 parameter of a non-member operator must be an enum, class, struct, or union, or a reference thereto, or a typedef thereof
